--- a/app/src/main/res/layout/content_trans_detail.xml
+++ b/app/src/main/res/layout/content_trans_detail.xml
@@ -28,10 +28,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:padding="@dimen/min_padding">
+                    android:padding="@dimen/xmin_padding">
 
                     <TextView
-                        android:id="@+id/textView2"
+                        android:id="@+id/detTrans_aset"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="@dimen/xmin_padding"
@@ -42,14 +42,14 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/textView14"
+                        android:id="@+id/detTrans_price"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:padding="@dimen/min_padding"
+                        android:padding="@dimen/xmin_padding"
                         android:text="650.000 IDR"
                         android:textAlignment="center"
-                        android:textColor="@color/colorPrimaryDark"
+                        android:textColor="@color/colorPrice"
                         android:textSize="@dimen/large_text"
                         android:textStyle="bold" />
 
@@ -83,7 +83,7 @@
                                 android:textStyle="bold" />
 
                             <TextView
-                                android:id="@+id/textView5"
+                                android:id="@+id/detTrans_idTrans"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_alignParentEnd="true"
@@ -101,29 +101,63 @@
                             android:textAlignment="center"
                             android:textSize="@dimen/medium_text" />
 
-                        <LinearLayout
+                        <RelativeLayout
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent"
+                            android:layout_height="wrap_content"
                             android:background="@color/colorPrimarySoft"
-                            android:orientation="vertical"
-                            android:padding="@dimen/xmin_padding">
+                            >
 
-                            <TextView
-                                android:id="@+id/textView11"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:padding="@dimen/xmin_padding"
-                                android:text="ID Pelanggan : 123xx01ac" />
+                            <LinearLayout
+                                android:id="@+id/det_member"
+                                android:layout_width="fill_parent"
+                                android:layout_height="match_parent"
+                                android:orientation="vertical"
+                                android:layout_toLeftOf="@+id/btn_camera"
+                                android:padding="@dimen/xmin_padding">
 
-                            <TextView
-                                android:id="@+id/textView10"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:padding="@dimen/xmin_padding"
-                                android:text="Nama Pelanggan : Mamat Suwer" />
+                                <TextView
+                                    android:id="@+id/textView11"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:padding="@dimen/xmin_padding"
+                                    android:text="ID Pelanggan : 123xx01ac" />
 
-                        </LinearLayout>
 
+                                <RelativeLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:padding="@dimen/small_space"
+                                    >
+
+                                    <TextView
+                                        android:id="@+id/tr_member_name_text"
+                                        android:layout_width="@dimen/text_label"
+                                        android:layout_height="wrap_content"
+                                        android:text="Nama "
+                                        />
+
+                                    <TextView
+                                        android:id="@+id/detTrans_member"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:layout_toRightOf="@+id/tr_member_name_text" />
+
+                                </RelativeLayout>
+
+                            </LinearLayout>
+
+                            <ImageButton
+                                android:id="@+id/btn_camera"
+                                android:layout_width="@dimen/breadcrumb_height"
+                                android:layout_height="@dimen/breadcrumb_height"
+                                android:layout_alignParentEnd="true"
+                                android:layout_centerVertical="true"
+                                android:src="@drawable/ic_camera_alt_white_36dp"
+                                android:clickable="true"
+                                android:visibility="gone"/>
+
+
+                        </RelativeLayout>
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
@@ -143,7 +177,7 @@
                                     android:text="Tanggal Sewa" />
 
                                 <TextView
-                                    android:id="@+id/textView3"
+                                    android:id="@+id/detTrans_startDate"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:layout_margin="@dimen/xmin_padding"
@@ -169,7 +203,7 @@
                                     android:text="Tanggal Kembali" />
 
                                 <TextView
-                                    android:id="@+id/textView8"
+                                    android:id="@+id/detTrans_endDate"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:layout_margin="@dimen/xmin_padding"
@@ -213,13 +247,13 @@
                                     android:textColor="@color/colorWhite"
                                     android:background="@android:color/holo_green_light"
                                     android:clickable="true"
-                                    android:textSize="12sp" />
+                                    android:textSize="12sp"
+                                    android:visibility="gone"/>
 
                             </RelativeLayout>
 
 
-
-                                <TextView
+                            <TextView
                                     android:id="@+id/textView16"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
@@ -238,20 +272,11 @@
 
         <LinearLayout
             android:id="@+id/btnContainer"
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true">
-
-            <Button
-                android:id="@+id/btnDrop"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/colorPrimaryDark"
-                android:text="Berhasil diantar"
-                android:textColor="@color/colorWhite"
-                android:textSize="@dimen/medium_text"
-                android:textStyle="bold" />
+            android:layout_centerHorizontal="true"
+            android:orientation="horizontal">
 
         </LinearLayout>
 
