--- a/app/src/main/res/layout/history_on_transaksi_view.xml
+++ b/app/src/main/res/layout/history_on_transaksi_view.xml
@@ -25,31 +25,56 @@
 
             <GridLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:background="@color/colorPrimarySoft">
 
                 <TextView
-                    android:id="@+id/tr_aset_type"
+                    android:id="@+id/tr_id_trans"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/xmin_padding"
                     android:layout_marginLeft="@dimen/min_padding"
-                    android:text="Daihatsu Xenia"
+                    android:text="-"
                     android:textColor="@color/colorPrimaryDark"
-                    android:textSize="@dimen/medium_text"
+                    android:textSize="@dimen/small_text"
                     android:textStyle="bold" />
 
+                <!--<TextView-->
+                    <!--android:id="@+id/tr_aset_type"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_margin="@dimen/xmin_padding"-->
+                    <!--android:layout_marginLeft="@dimen/min_padding"-->
+                    <!--android:text="Daihatsu Xenia"-->
+                    <!--android:textColor="@color/colorPrimaryDark"-->
+                    <!--android:textSize="@dimen/medium_text"-->
+                    <!--android:textStyle="bold" />-->
+
                 <TextView
-                    android:id="@+id/tr_notif"
+                    android:id="@+id/tr_nominal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="right"
                     android:layout_margin="@dimen/xmin_padding"
                     android:layout_marginRight="@dimen/min_padding"
-                    android:background="@color/colorPrimarySoft"
                     android:padding="@dimen/xmin_padding"
-                    android:text="DC 123 WOW"
-                    android:textColor="@color/colorBlack"
+                    android:textColor="@color/colorPrice"
+                    android:textStyle="bold"
+                    android:text="IDR"
                     android:textSize="@dimen/small_text" />
+
+                <!--<TextView-->
+                    <!--android:id="@+id/tr_notif"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_gravity="right"-->
+                    <!--android:layout_margin="@dimen/xmin_padding"-->
+                    <!--android:layout_marginRight="@dimen/min_padding"-->
+                    <!--android:background="@color/colorPrimarySoft"-->
+                    <!--android:padding="@dimen/xmin_padding"-->
+                    <!--android:text="DC 123 WOW"-->
+                    <!--android:textColor="@color/colorBlack"-->
+                    <!--android:textSize="@dimen/small_text" />-->
 
             </GridLayout>
 
@@ -64,82 +89,130 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/min_padding"
                     android:layout_marginRight="@dimen/min_padding"
-                    android:layout_toRightOf="@+id/tr_thumb_aset"
-                    android:padding="@dimen/xmin_padding">
+                    android:padding="@dimen/small_space"
+                    >
 
-                    <ImageView
-                        android:id="@+id/tr_member_thumb"
-                        android:layout_width="@dimen/thumb_prop_width"
-                        android:layout_height="@dimen/thumb_prop_height"
-                        android:layout_marginRight="@dimen/activity_horizontal_margin"
-                        app:srcCompat="@drawable/ic_person_black_18dp" />
+                    <!--<ImageView-->
+                        <!--android:id="@+id/tr_member_thumb"-->
+                        <!--android:layout_width="@dimen/thumb_prop_width"-->
+                        <!--android:layout_height="@dimen/thumb_prop_height"-->
+                        <!--android:layout_marginRight="@dimen/activity_horizontal_margin"-->
+                        <!--app:srcCompat="@drawable/ic_person_black_18dp" />-->
+
+                    <TextView
+                        android:id="@+id/tr_member_name_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Penyewa : "
+                        android:textSize="@dimen/tiny_text"
+                    />
 
                     <TextView
                         android:id="@+id/tr_member_det"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_toRightOf="@+id/tr_member_thumb" />
+                        android:textSize="@dimen/tiny_text"
+                        android:layout_toRightOf="@+id/tr_member_name_text" />
 
                 </RelativeLayout>
 
                 <RelativeLayout
-                    android:id="@+id/tr_waktu_sewa"
+                    android:id="@+id/tr_waktu_sewa_start"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/tr_member"
                     android:layout_marginLeft="@dimen/min_padding"
                     android:layout_marginRight="@dimen/min_padding"
                     android:layout_toRightOf="@+id/tr_thumb_aset"
-                    android:padding="@dimen/xmin_padding">
+                    android:padding="@dimen/small_space">
 
-                    <ImageView
-                        android:id="@+id/tr_waktu_thumb"
-                        android:layout_width="@dimen/thumb_prop_width"
-                        android:layout_height="@dimen/thumb_prop_height"
-                        android:layout_marginRight="@dimen/activity_horizontal_margin"
-                        app:srcCompat="@drawable/ic_perm_contact_calendar_black_18dp" />
+                    <!--<ImageView-->
+                        <!--android:id="@+id/tr_waktu_thumb"-->
+                        <!--android:layout_width="@dimen/thumb_prop_width"-->
+                        <!--android:layout_height="@dimen/thumb_prop_height"-->
+                        <!--android:layout_marginRight="@dimen/activity_horizontal_margin"-->
+                        <!--app:srcCompat="@drawable/ic_perm_contact_calendar_black_18dp" />-->
 
                     <TextView
-                        android:id="@+id/tr_waktu_det"
+                        android:id="@+id/tr_start_date_t"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_toRightOf="@+id/tr_waktu_thumb" />
+                        android:text="Waktu Mulai :"
+                        android:textSize="@dimen/tiny_text"
+                        />
+
+
+                    <TextView
+                        android:id="@+id/tr_start_date"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_toRightOf="@+id/tr_start_date_t"
+                        android:textSize="@dimen/tiny_text"
+                        />
 
                 </RelativeLayout>
 
+                <RelativeLayout
+                    android:id="@+id/tr_waktu_sewa_end"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tr_waktu_sewa_start"
+                    android:layout_marginLeft="@dimen/min_padding"
+                    android:layout_marginRight="@dimen/min_padding"
+                    android:padding="@dimen/small_space">
+
+                    <TextView
+                        android:id="@+id/tr_end_date_t"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Waktu Selesai"
+                        android:textSize="@dimen/tiny_text"
+                         />
+
+
+                    <TextView
+                        android:id="@+id/tr_end_date"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_toRightOf="@+id/tr_end_date_t"
+                        android:textSize="@dimen/tiny_text"
+                        />
+
             </RelativeLayout>
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/xmin_padding"
-                android:padding="@dimen/xmin_padding">
-
-                <TextView
-                    android:id="@+id/tr_harga_det"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:layout_centerVertical="true"
-                    android:layout_gravity="center"
-                    android:layout_marginStart="@dimen/min_padding"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="@dimen/medium_text" />
-
-                <com.iarcuschin.simpleratingbar.SimpleRatingBar
-                    android:id="@+id/aset_rating2"
-                    android:layout_width="150dp"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
-                    android:layout_gravity="center"
-                    android:layout_marginEnd="@dimen/min_padding"
-                    android:padding="@dimen/xmin_padding"
-                    app:srb_isIndicator="true"
-                    app:srb_rating="4.5"
-                    style="@style/CustomRatingBar"/>
-
             </RelativeLayout>
+
+            <!--<RelativeLayout-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginBottom="@dimen/xmin_padding"-->
+                <!--android:padding="@dimen/xmin_padding">-->
+
+                <!--<TextView-->
+                    <!--android:id="@+id/tr_harga_det"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_alignParentStart="true"-->
+                    <!--android:layout_centerVertical="true"-->
+                    <!--android:layout_gravity="center"-->
+                    <!--android:layout_marginStart="@dimen/min_padding"-->
+                    <!--android:textColor="@color/colorPrimary"-->
+                    <!--android:textSize="@dimen/medium_text" />-->
+
+                <!--<com.iarcuschin.simpleratingbar.SimpleRatingBar-->
+                    <!--android:id="@+id/aset_rating2"-->
+                    <!--android:layout_width="150dp"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_alignParentEnd="true"-->
+                    <!--android:layout_centerVertical="true"-->
+                    <!--android:layout_gravity="center"-->
+                    <!--android:layout_marginEnd="@dimen/min_padding"-->
+                    <!--android:padding="@dimen/xmin_padding"-->
+                    <!--app:srb_isIndicator="true"-->
+                    <!--app:srb_rating="4.5"-->
+                    <!--style="@style/CustomRatingBar"/>-->
+
+            <!--</RelativeLayout>-->
 
         </LinearLayout>
 
