--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,6 +8,7 @@
     <dimen name="med_padding">20dp</dimen>
     <dimen name="min_padding">10dp</dimen>
     <dimen name="xmin_padding">5dp</dimen>
+    <dimen name="small_space">3dp</dimen>
     <dimen name="neg_xmin_padding">-5dp</dimen>
     <dimen name="no_padding">0dp</dimen>
     <dimen name="breadcrumb_height">60dp</dimen>
@@ -18,6 +19,7 @@
     <dimen name="medium_text">18sp</dimen>
     <dimen name="small_text">16sp</dimen>
     <dimen name="huge_text">32sp</dimen>
+    <dimen name="tiny_text">10sp</dimen>
 
     <dimen name="thumb_width">100dp</dimen>
     <dimen name="thumb_height">100dp</dimen>
@@ -30,6 +32,7 @@
     <dimen name="msg_thumb_width">64dp</dimen>
     <dimen name="msg_thumb_height">64dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+    <dimen name="text_label">75dp</dimen>
 
     <dimen name="slight_margin">4dp</dimen>
     <dimen name="recycler_item_size">192dp</dimen>
