--- a/app/src/main/res/layout/fragment_history_accept.xml
+++ b/app/src/main/res/layout/fragment_history_accept.xml
@@ -15,4 +15,15 @@
         android:padding="@dimen/xmin_padding">
     </android.support.v7.widget.RecyclerView>
 
+    <com.github.ybq.android.spinkit.SpinKitView
+        android:id="@+id/progressBar"
+        style="@style/SpinKitView.FadingCircle"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/btn_lmedium_height"
+        android:layout_marginTop="@dimen/breadcrumb_height"
+        android:background="@android:color/transparent"
+        android:padding="@dimen/min_padding"
+        android:visibility="gone"
+        app:SpinKit_Color="@color/colorWhite" />
+
 </LinearLayout>
