transaksi all in one

--- a/app/src/main/res/layout/content_trans_detail.xml
+++ b/app/src/main/res/layout/content_trans_detail.xml
@@ -83,7 +83,7 @@
                                 android:textStyle="bold" />
 
                             <TextView
-                                android:id="@+id/detTrans_idTrans"
+                                android:id="@+id/detTrans_codeTrans"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_alignParentEnd="true"
