--- a/app/src/main/res/layout/history_accept_view.xml
+++ b/app/src/main/res/layout/history_accept_view.xml
@@ -29,7 +29,7 @@
                 android:background="@color/colorPrimarySoft">
 
                 <TextView
-                    android:id="@+id/tr_acc_id_trans"
+                    android:id="@+id/tr_acc_code_trans"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/xmin_padding"
