--- a/app/src/main/res/layout/trx_item_view.xml
+++ b/app/src/main/res/layout/trx_item_view.xml
@@ -7,14 +7,16 @@
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/card_view_newtransaksi"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/card_view_transaksi"
         android:layout_marginBottom="@dimen/xmin_padding"
-        app:cardBackgroundColor="@color/colorWhite"
-        app:cardElevation="1dp"
+        android:clickable="true"
         android:foreground="?selectableItemBackground"
-        android:clickable="true">
+        android:paddingLeft="@dimen/min_padding"
+        android:paddingRight="@dimen/min_padding"
+        app:cardBackgroundColor="@color/colorWhite"
+        app:cardElevation="1dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -23,145 +25,153 @@
 
             <GridLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:background="@color/colorPrimarySoft">
 
                 <TextView
-                    android:id="@+id/tr_aset_type"
+                    android:id="@+id/tr_new_code_trans"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/xmin_padding"
-                    android:layout_marginLeft="@dimen/xmin_padding"
-                    android:text="Daihatsu Jazz | DC 123 WOW | 2015"
+                    android:layout_marginLeft="@dimen/min_padding"
+                    android:text="-"
                     android:textColor="@color/colorPrimaryDark"
-                    android:textSize="@dimen/medium_text"
+                    android:textSize="@dimen/small_text" />
+
+                <TextView
+                    android:id="@+id/tr_new_nominal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:layout_margin="@dimen/xmin_padding"
+                    android:layout_marginRight="@dimen/min_padding"
+                    android:padding="@dimen/xmin_padding"
+                    android:text="IDR"
+                    android:textColor="@color/colorPrice"
+                    android:textSize="@dimen/small_text"
                     android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/tr_aset_year"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/xmin_padding"
-                    android:layout_gravity="right"
-                    android:padding="@dimen/xmin_padding"
-                    android:text=""
-                    android:textSize="@dimen/small_text"
-                    android:textStyle="bold"/>
-
-                <TextView
-                    android:id="@+id/tr_notif"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/xmin_padding"
-                    android:layout_gravity="right"
-                    android:background="@drawable/radius_danger"
-                    android:padding="@dimen/xmin_padding"
-                    android:text="New Order"
-                    android:textSize="@dimen/small_text"
-                    android:textColor="@color/colorWhite"/>
 
             </GridLayout>
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:padding="@dimen/xmin_padding">
+                android:padding="@dimen/cardview_compat_inset_shadow">
 
-                <ImageView
-                    android:id="@+id/tr_thumb_aset"
-                    android:layout_width="@dimen/thumb_width"
-                    android:layout_height="@dimen/thumb_height"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginRight="@dimen/activity_horizontal_margin"/>
+                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/tr_new_thumb"
+                    android:layout_width="@dimen/msg_thumb_width"
+                    android:layout_height="@dimen/msg_thumb_width"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="@dimen/xmin_padding"
+                    android:src="@drawable/user_ava_man"
+                    app:civ_border_color="#FFf"
+                    app:civ_border_width="2dp" />
+
+
+                <RelativeLayout
+                    android:id="@+id/tr_aset_con"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/min_padding"
+                    android:layout_marginRight="@dimen/min_padding"
+                    android:layout_toRightOf="@+id/tr_new_thumb"
+                    android:padding="@dimen/small_space">
+
+                    <TextView
+                        android:id="@+id/tr_aset_text"
+                        android:layout_width="@dimen/text_label"
+                        android:layout_height="wrap_content"
+                        android:text="Aset"
+                        android:textSize="@dimen/tiny_text" />
+
+                    <TextView
+                        android:id="@+id/tr_new_aset"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_toRightOf="@+id/tr_aset_text"
+                        android:textSize="@dimen/tiny_text" />
+
+                </RelativeLayout>
 
                 <RelativeLayout
                     android:id="@+id/tr_member"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="@dimen/xmin_padding"
-                    android:layout_toRightOf="@+id/tr_thumb_aset">
-
-                    <ImageView
-                        android:id="@+id/tr_member_thumb"
-                        android:layout_width="@dimen/thumb_prop_width"
-                        android:layout_height="@dimen/thumb_prop_height"
-                        android:layout_marginRight="@dimen/activity_horizontal_margin"
-                        app:srcCompat="@drawable/ic_person_black_18dp"/>
+                    android:layout_below="@+id/tr_aset_con"
+                    android:layout_marginLeft="@dimen/min_padding"
+                    android:layout_marginRight="@dimen/min_padding"
+                    android:layout_toRightOf="@+id/tr_new_thumb"
+                    android:padding="@dimen/small_space">
 
                     <TextView
-                        android:id="@+id/tr_member_det"
+                        android:id="@+id/tr_member_name_text"
+                        android:layout_width="@dimen/text_label"
+                        android:layout_height="wrap_content"
+                        android:text="Pelanggan"
+                        android:textSize="@dimen/tiny_text" />
+
+                    <TextView
+                        android:id="@+id/tr_new_member"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_toRightOf="@+id/tr_member_thumb"/>
+                        android:layout_toRightOf="@+id/tr_member_name_text"
+                        android:textSize="@dimen/tiny_text" />
 
                 </RelativeLayout>
 
                 <RelativeLayout
-                    android:id="@+id/tr_waktu_sewa"
+                    android:id="@+id/tr_waktu_sewa_start"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="@dimen/xmin_padding"
-                    android:layout_toRightOf="@+id/tr_thumb_aset"
-                    android:layout_below="@id/tr_member">
-
-                    <ImageView
-                        android:id="@+id/tr_waktu_thumb"
-                        android:layout_width="@dimen/thumb_prop_width"
-                        android:layout_height="@dimen/thumb_prop_height"
-                        android:layout_marginRight="@dimen/activity_horizontal_margin"
-                        app:srcCompat="@drawable/ic_perm_contact_calendar_black_18dp"/>
+                    android:layout_below="@id/tr_member"
+                    android:layout_marginLeft="@dimen/min_padding"
+                    android:layout_marginRight="@dimen/min_padding"
+                    android:layout_toRightOf="@+id/tr_new_thumb"
+                    android:padding="@dimen/small_space">
 
                     <TextView
-                        android:id="@+id/tr_waktu_det"
+                        android:id="@+id/tr_start_date_t"
+                        android:layout_width="@dimen/text_label"
+                        android:layout_height="wrap_content"
+                        android:text="Waktu Mulai"
+                        android:textSize="@dimen/tiny_text" />
+
+
+                    <TextView
+                        android:id="@+id/tr_new_start_date"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_toRightOf="@+id/tr_waktu_thumb"/>
+                        android:layout_toRightOf="@+id/tr_start_date_t"
+                        android:textSize="@dimen/tiny_text" />
 
                 </RelativeLayout>
 
                 <RelativeLayout
-                    android:id="@+id/tr_lokasi_drop"
+                    android:id="@+id/tr_waktu_sewa_end"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="@dimen/xmin_padding"
-                    android:layout_toRightOf="@+id/tr_thumb_aset"
-                    android:layout_below="@id/tr_waktu_sewa">
-
-                    <ImageView
-                        android:id="@+id/tr_lokasi_thumb"
-                        android:layout_width="@dimen/thumb_prop_width"
-                        android:layout_height="@dimen/thumb_prop_height"
-                        android:layout_marginRight="@dimen/activity_horizontal_margin"
-                        app:srcCompat="@drawable/ic_location_on_black_18dp"/>
+                    android:layout_below="@id/tr_waktu_sewa_start"
+                    android:layout_marginLeft="@dimen/min_padding"
+                    android:layout_marginRight="@dimen/min_padding"
+                    android:layout_toRightOf="@+id/tr_new_thumb"
+                    android:layout_marginBottom="@dimen/xmin_padding"
+                    android:padding="@dimen/small_space">
 
                     <TextView
-                        android:id="@+id/tr_lokasi_det"
-                        android:layout_width="wrap_content"
+                        android:id="@+id/tr_end_date_t"
+                        android:layout_width="@dimen/text_label"
                         android:layout_height="wrap_content"
-                        android:layout_toRightOf="@+id/tr_lokasi_thumb"/>
+                        android:text="Waktu Selesai"
+                        android:textSize="@dimen/tiny_text" />
 
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:id="@+id/tr_harga_sewa"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="@dimen/xmin_padding"
-                    android:layout_toRightOf="@+id/tr_thumb_aset"
-                    android:layout_below="@id/tr_lokasi_drop">
-
-                    <ImageView
-                        android:id="@+id/tr_harga_thumb"
-                        android:layout_width="@dimen/thumb_prop_width"
-                        android:layout_height="@dimen/thumb_prop_height"
-                        android:layout_marginRight="@dimen/activity_horizontal_margin"
-                        app:srcCompat="@drawable/ic_monetization_on_black_18dp"/>
 
                     <TextView
-                        android:id="@+id/tr_harga_det"
+                        android:id="@+id/tr_new_end_date"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_toRightOf="@+id/tr_harga_thumb"/>
+                        android:layout_toRightOf="@+id/tr_end_date_t"
+                        android:textSize="@dimen/tiny_text" />
 
                 </RelativeLayout>
 
