--- a/app/src/main/res/layout/content_transaction.xml
+++ b/app/src/main/res/layout/content_transaction.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/content_transaction"
@@ -7,7 +7,36 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="id.rentist.mitrarentist.TransactionActivity"
-    tools:showIn="@layout/activity_transaction">
+    tools:showIn="@layout/activity_transaction"
+    android:orientation="vertical">
+
+    <LinearLayout
+        android:id="@+id/no_trans"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/status_width"
+        android:orientation="vertical"
+        android:visibility="gone"
+        >
+
+        <ImageView
+            android:layout_width="@dimen/explorer_item_size"
+            android:layout_height="@dimen/explorer_item_size"
+            android:layout_gravity="center|center_vertical"
+            android:src="@drawable/no_transaction"
+            />
+
+        <TextView
+            android:id="@+id/no_trans_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/min_padding"
+            android:textAlignment="center"
+            android:textColor="@color/colorBlack54"
+            android:textStyle="bold"
+            />
+
+    </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/tr_recyclerView"
@@ -27,4 +56,4 @@
         android:visibility="gone"
         app:SpinKit_Color="@color/colorWhite" />
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
